Refactor tests: Use List.of() and extract REGISTRATION_ID constant
Co-authored-by: gishi-yama <1794095+gishi-yama@users.noreply.github.com>