@@ -1,9 +1,8 @@
 package prmn.front.vaadin.service.common;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import org.junit.jupiter.api.AfterEach;
@@ -17,6 +16,7 @@ import org.springframework.security.oauth2.core.user.OAuth2User;
 
 class AuthenticatedUserServiceTest {
 
+  private static final String REGISTRATION_ID = "azure";
   private AuthenticatedUserService service;
 
   @BeforeEach
@@ -55,11 +55,11 @@ class AuthenticatedUserServiceTest {
   void findEmail_shouldReturnEmpty_whenEmailAttributeIsMissing() {
     // メール属性がない場合は空を返す
     OAuth2User user = new DefaultOAuth2User(
-        java.util.Collections.emptyList(),
+        List.of(),
         Map.of("sub", "user-id"),
         "sub");
     OAuth2AuthenticationToken token = new OAuth2AuthenticationToken(
-        user, java.util.Collections.emptyList(), "azure");
+        user, List.of(), REGISTRATION_ID);
     SecurityContextHolder.getContext().setAuthentication(token);
 
     Optional<String> result = service.findEmail();
@@ -71,11 +71,11 @@ class AuthenticatedUserServiceTest {
   void findEmail_shouldReturnEmpty_whenEmailAttributeIsNotString() {
     // メール属性がStringでない場合は空を返す
     OAuth2User user = new DefaultOAuth2User(
-        java.util.Collections.emptyList(),
+        List.of(),
         Map.of("sub", "user-id", "email", 12345),
         "sub");
     OAuth2AuthenticationToken token = new OAuth2AuthenticationToken(
-        user, java.util.Collections.emptyList(), "azure");
+        user, List.of(), REGISTRATION_ID);
     SecurityContextHolder.getContext().setAuthentication(token);
 
     Optional<String> result = service.findEmail();
@@ -87,11 +87,11 @@ class AuthenticatedUserServiceTest {
   void findEmail_shouldReturnEmpty_whenEmailAttributeIsBlank() {
     // メール属性がブランクの場合は空を返す
     OAuth2User user = new DefaultOAuth2User(
-        java.util.Collections.emptyList(),
+        List.of(),
         Map.of("sub", "user-id", "email", "   "),
         "sub");
     OAuth2AuthenticationToken token = new OAuth2AuthenticationToken(
-        user, java.util.Collections.emptyList(), "azure");
+        user, List.of(), REGISTRATION_ID);
     SecurityContextHolder.getContext().setAuthentication(token);
 
     Optional<String> result = service.findEmail();
@@ -103,11 +103,11 @@ class AuthenticatedUserServiceTest {
   void findEmail_shouldReturnEmpty_whenEmailAttributeIsEmptyString() {
     // メール属性が空文字の場合は空を返す
     OAuth2User user = new DefaultOAuth2User(
-        java.util.Collections.emptyList(),
+        List.of(),
         Map.of("sub", "user-id", "email", ""),
         "sub");
     OAuth2AuthenticationToken token = new OAuth2AuthenticationToken(
-        user, java.util.Collections.emptyList(), "azure");
+        user, List.of(), REGISTRATION_ID);
     SecurityContextHolder.getContext().setAuthentication(token);
 
     Optional<String> result = service.findEmail();
@@ -120,11 +120,11 @@ class AuthenticatedUserServiceTest {
     // すべての条件を満たす場合はメールを返す
     String expectedEmail = "test@example.com";
     OAuth2User user = new DefaultOAuth2User(
-        java.util.Collections.emptyList(),
+        List.of(),
         Map.of("sub", "user-id", "email", expectedEmail),
         "sub");
     OAuth2AuthenticationToken token = new OAuth2AuthenticationToken(
-        user, java.util.Collections.emptyList(), "azure");
+        user, List.of(), REGISTRATION_ID);
     SecurityContextHolder.getContext().setAuthentication(token);
 
     Optional<String> result = service.findEmail();
